// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect should match snapshot with props 1`] = `
<div
  class="select__container"
>
  <resize-observer-stub />
   
  <div
    class="v-select form-select text-base vs--single vs--searchable"
    dir="auto"
  >
     
    <div
      aria-expanded="false"
      aria-label="Search for option"
      aria-owns="vs2__listbox"
      class="vs__dropdown-toggle"
      id="vs2__combobox"
      role="combobox"
    >
      <div
        class="vs__selected-options"
      >
         
        <input
          aria-autocomplete="list"
          aria-controls="vs2__listbox"
          aria-labelledby="vs2__combobox"
          autocomplete="off"
          class="vs__search"
          id="select-id-"
          placeholder="Some Value"
          type="search"
        />
      </div>
       
      <div
        class="vs__actions"
      >
        <button
          aria-label="Clear Selected"
          class="vs__clear"
          style="display: none;"
          title="Clear Selected"
          type="button"
        >
          <base-button
            action="() => {
        /* istanbul ignore next */
        cov_3cekvzqye().f[0]++;
      }"
            alt="actions.cancel"
            ccu-event=""
            class="flex items-center base-icon js-actions-cancel   mx-1 opacity-50"
            title="actions.cancel"
          >
            <img
              alt="actions.cancel"
              class="ccu-icon cursor-pointer medium"
              src="IMAGE_MOCK"
            />
             
          </base-button>
        </button>
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-sort fa-sm mx-1 text-crisiscleanup-dark-400 vs__open-indicator"
          data-icon="sort"
          data-prefix="fas"
          focusable="false"
          role="presentation"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"
            fill="currentColor"
          />
        </svg>
         
        <div
          class="vs__spinner"
          style="display: none;"
        >
          Loading...
        </div>
      </div>
    </div>
     
    <transition-stub
      name="vs__fade"
    >
      <ul
        id="vs2__listbox"
        role="listbox"
        style="display: none; visibility: hidden;"
      />
    </transition-stub>
     
  </div>
   
  <!---->
</div>
`;

exports[`FormSelect should render correctly and match snapshot 1`] = `
<div
  class="select__container"
>
  <resize-observer-stub />
   
  <div
    class="v-select form-select text-base vs--single vs--searchable"
    dir="auto"
  >
     
    <div
      aria-expanded="false"
      aria-label="Search for option"
      aria-owns="vs1__listbox"
      class="vs__dropdown-toggle"
      id="vs1__combobox"
      role="combobox"
    >
      <div
        class="vs__selected-options"
      >
         
        <input
          aria-autocomplete="list"
          aria-controls="vs1__listbox"
          aria-labelledby="vs1__combobox"
          autocomplete="off"
          class="vs__search"
          id="select-id-"
          placeholder="Some Value"
          type="search"
        />
      </div>
       
      <div
        class="vs__actions"
      >
        <button
          aria-label="Clear Selected"
          class="vs__clear"
          style="display: none;"
          title="Clear Selected"
          type="button"
        >
          <base-button
            action="() => {
        /* istanbul ignore next */
        cov_3cekvzqye().f[0]++;
      }"
            alt="actions.cancel"
            ccu-event=""
            class="flex items-center base-icon js-actions-cancel   mx-1 opacity-50"
            title="actions.cancel"
          >
            <img
              alt="actions.cancel"
              class="ccu-icon cursor-pointer medium"
              src="IMAGE_MOCK"
            />
             
          </base-button>
        </button>
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-sort fa-sm mx-1 text-crisiscleanup-dark-400 vs__open-indicator"
          data-icon="sort"
          data-prefix="fas"
          focusable="false"
          role="presentation"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"
            fill="currentColor"
          />
        </svg>
         
        <div
          class="vs__spinner"
          style="display: none;"
        >
          Loading...
        </div>
      </div>
    </div>
     
    <transition-stub
      name="vs__fade"
    >
      <ul
        id="vs1__listbox"
        role="listbox"
        style="display: none; visibility: hidden;"
      />
    </transition-stub>
     
  </div>
   
  <!---->
</div>
`;
